(WIP) use TestFX to do a real file selection